# failset

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  case-pack.schema.json  package-lock.json  package.json  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cases/: structured-output.json  tool-calls.json
examples/: adapter.py
scripts/: build_case_schema.py  validate_case_schema.mjs
src/failset/: __init__.py  cli.py  loader.py  models.py  runner.py
tests/integration/: test_case_packs.py  test_case_schema.py
tests/unit/: test_adapter_example.py  test_cli.py  test_models.py  test_runner.py
