[build-system]
requires = ["hatchling==1.31.0"]
build-backend = "hatchling.build"

[project]
name = "failset-sampler"
version = "0.1.0"
description = "Deterministic contract-test sampler for structured LLM outputs and tool calls"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["llm", "testing", "tool-calling", "structured-output", "json-schema"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Testing",
]
dependencies = [
  "jsonschema>=4.24,<5",
  "pydantic>=2.11,<3",
]

[project.optional-dependencies]
dev = [
  "email-validator>=2.2,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6,<7",
]

[dependency-groups]
security = [
  "bandit==1.9.4",
  "pip-audit==2.10.1",
  "zizmor==1.27.0",
]
release = [
  "hatchling==1.31.0",
  "pypi-attestations==0.0.29",
  "twine==6.2.0",
]

[project.scripts]
failset = "failset.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/failset"]

[tool.hatch.build.targets.wheel.force-include]
"cases" = "failset/cases"
"case-pack.schema.json" = "failset/case-pack.schema.json"

[tool.hatch.build.targets.sdist]
include = [
  "/LICENSE",
  "/README.md",
  "/case-pack.schema.json",
  "/cases",
  "/pyproject.toml",
  "/src/failset",
]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["."]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["failset"]

[tool.coverage.report]
fail_under = 90
show_missing = true

[project.urls]
Homepage = "https://github.com/armantark/failset"
Repository = "https://github.com/armantark/failset"
Issues = "https://github.com/armantark/failset/issues"
